<resources>
    <string name="app_name">WeatherInfo</string>
    <string name="login">Login</string>
    <string name="invalidemail">Invalid Email</string>
    <string name="invalidpasswprd">Invalid Password</string>
    <string name="search">search</string>
    <string name="winddirection">Wind direction</string>
    <string name="temp">Temp</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="humidity">Humidity</string>
    <string name="loading">loading..</string>
</resources>
