<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="weatherViewModel"
            type="com.weatherinfo.viewmodel.WeatherViewModel" />
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginStart="@dimen/size_normal"
    android:layout_marginEnd="@dimen/size_normal"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="@dimen/size_normal"
        android:id="@+id/weatherstate"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="@dimen/textsize_normal"
        android:text="@={weatherViewModel.weatherState}"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rl_winddirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_normal"
        android:layout_below="@id/weatherstate">

        <TextView
            android:id="@+id/tv_winddirection"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/size_xsmall"
            android:layout_alignParentLeft="true"
            android:text="@string/winddirection"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_winddirection_val"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/textsize_normal"
            android:layout_marginStart="@dimen/size_normal"
            android:layout_toRightOf="@id/tv_winddirection"
            android:text="@={weatherViewModel.windDirection}"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_temprature"
        android:layout_below="@id/rl_winddirection"
        android:layout_marginTop="@dimen/size_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/size_xsmall"
            android:layout_alignParentLeft="true"
            android:text="@string/temp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_temp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/size_xsmall"
                android:layout_marginStart="@dimen/size_normal"
                android:text="@string/min"/>

            <TextView
                android:id="@+id/tv_minval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_normal"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_normal"
                android:text="@={weatherViewModel.tempMin}"/>

            <TextView
                android:id="@+id/tv_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/size_xsmall"
                android:layout_marginStart="@dimen/size_normal"
                android:text="@string/max"/>

            <TextView
                android:id="@+id/tv_maxval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_normal"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_normal"
                android:text="@={weatherViewModel.tempMax}"/>

        </LinearLayout>
    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_normal"
            android:layout_below="@id/rl_temprature">

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/size_xsmall"
                android:layout_alignParentLeft="true"
                android:text="@string/humidity"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_humidity_val"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_normal"
                android:layout_marginStart="@dimen/size_normal"
                android:layout_toRightOf="@id/tv_humidity"
                android:text="@={weatherViewModel.humidity}"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>
</layout>